# hippo

./: .dockerignore  .gitignore  .proto  CLAUDE.md  Cargo.toml  Dockerfile  README.md  book.toml  debug_test.py  docker-compose.yml  guidance.md  project-detection-design.md  pyproject.toml  setup-dev.py  tracking-issue-draft.md  verify-install.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.socratic-shell/: .commit-stamp
data/: hippo1.json
md/: SUMMARY.md  design-doc.md  docker.md  how-to-use.md  installation.md  introduction.md  mcp-setup.md
md/design/: design-doc.md  testing-strategy.md
md/research/: file-watching-event-drop.md  file-watching-watch.md  guide-to-testing-mcp-servers-with-promptfoo.md  rust-sentence-transformers-alternatives-claude-ai.md  rust-sentence-transformers-alternatives-gemini.md  temporary-frequent-scoring.md
py/hippo/: __init__.py  constants.py  file_storage.py  migration_adapter.py  mocks.py  models.py  search.py  server.py  storage.py  storage_protocol.py  test_file_storage.py  test_migration_adapter.py  test_storage.py  test_time.py
rs/: Cargo.toml
rs/src/: constants.rs  lib.rs  main.rs  models.rs  project_detection.rs  search.rs  storage.rs
rs/test-data/: e3fc03e2-5da0-4dca-ae23-4da4b44d104e.json
rs/tests/: integration_test.rs  mcp_integration_test.rs
setup/: Cargo.toml
setup/src/: main.rs
src/: SUMMARY.md  introduction.md
tests/: test_mcp_comprehensive.py  test_mcp_integration.py  test_temporal_scoring.py
~/dev/NikomatDocs/: hippo.json
