[workspace]
members = ["rs", "setup"]
resolver = "2"

[workspace.lints.clippy]
# Allow format string style preference - this is purely cosmetic
uninlined_format_args = "allow"

# We want to keep other clippy lints strict (lower priority so specific lints can override)
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["derive", "uuid1"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
notify = "6.0"

# Async traits
async-trait = "0.1"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# FastEmbed for sentence transformers
fastembed = "5.0"

# MCP SDK
rmcp = { version = "0.3", features = ["server", "macros", "transport-io", "client", "transport-child-process"] }

# Testing
tokio-test = "0.4"
tempfile = "3.0"

# Setup tool dependencies
which = "6.0"
home = "0.5"
