[project]
name = "hippo-mcp-server"
version = "0.1.0"
description = "AI-Generated Insights Memory System MCP Server"
readme = "README.md"
authors = [
    {name = "Niko Matsakis"},
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "watchdog>=3.0.0",
]

[project.scripts]
hippo-server = "hippo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RUF", # Ruff-specific rules
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["py/tests"]

[tool.hatch.build.targets.wheel]
packages = ["py/hippo"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.8.0",
    "types-aiofiles>=24.1.0.20250708",
]
