[package]
name = "hippo"
version = "0.1.0"
edition = "2021"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "AI-Generated Insights Memory System - Rust implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/socratic-shell/hippo"

[lib]
name = "hippo"
path = "src/lib.rs"

[[bin]]
name = "hippo-server"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system operations
notify = { workspace = true }

# Async traits
async-trait = { workspace = true }

# CLI parsing (for standalone server)
clap = { workspace = true }

# FastEmbed for sentence transformers
fastembed = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

[dev-dependencies]
# Testing
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
